--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,13 @@
 spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
-#spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 
 # var
 hostname=localhost:8080
+
+# hide error message - bug postgres
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
