--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+# app
+app.name=Bank-manager
+
 # db
 spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 
 # var
@@ -12,3 +15,5 @@ hostname=localhost:8080
 
 # hide error message - bug postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# thymleaf
+spring.thymeleaf.cache=false
