--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
     compile('org.springframework.security:spring-security-test')
     compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
+    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.postgresql:postgresql')
 }
