--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,13 +5,18 @@ app.name=Bank-manager
 spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
+spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Spring logging { INFO, DEBUG, ERROR }
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
 
 # var
-hostname=bank-manager
+hostname=localhost:8080
 
 # hide error message - bug postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
