--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,11 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-security')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
     compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
 //	compile('org.springframework.session:spring-session-jdbc')
