--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # Spring logging { INFO, DEBUG, ERROR }
