refactor u controller & add templates

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,19 +5,24 @@ app.name=Bank-manager
 spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
-spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
 
 # Spring logging { INFO, DEBUG, ERROR }
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=ERROR
-logging.level.org.hibernate=ERROR
+logging.level.sql = debug
+logging.level.org.springframework.security=debug
+#logging.level.org.springframework.security.authentication=debug
+#logging.level.org.springframework.security.authorization=debug
+logging.level.org.springframework.web=error
+logging.level.org.hibernate=error
 
 # var
 hostname=localhost:8080
 
+# generate view off
+spring.jpa.open-in-view=false
 # hide error message - bug postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # thymleaf
