--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,14 @@ repositories {
 
 
 dependencies {
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.session:spring-session-core')
+	implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
+	runtimeOnly('org.postgresql:postgresql')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
-    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
-//	compile('org.springframework.session:spring-session-jdbc')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.postgresql:postgresql')
 }
