add form invoice

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,15 +6,15 @@ spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
 # Spring logging { INFO, DEBUG, ERROR }
 logging.level.sql = debug
-logging.level.org.springframework.security=debug
-#logging.level.org.springframework.security.authentication=debug
-#logging.level.org.springframework.security.authorization=debug
+#logging.level.org.springframework.security=debug
+logging.level.org.springframework.security.authentication=debug
+logging.level.org.springframework.security.authorization=debug
 logging.level.org.springframework.web=error
 logging.level.org.hibernate=error
 
