--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
