changer form user profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-# app
-app.name=Bank-manager
-
+##############
+## Settings ##
+##############
 # db
 spring.datasource.url= ${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
@@ -18,8 +18,9 @@ logging.level.org.springframework.security.authorization=debug
 logging.level.org.springframework.web=error
 logging.level.org.hibernate=error
 
-# var
-hostname=localhost:8080
+# server tomcat
+server.port=9000
+
 
 # generate view off
 spring.jpa.open-in-view=false
@@ -27,3 +28,11 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # thymleaf
 spring.thymeleaf.cache=false
+
+########
+# Vars #
+########
+# app
+app.name=Bank-manager
+# address
+hostname=localhost:9000
