--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,11 @@ spring.datasource.password=${DATABASE_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
+# Lucene search
+hibernate.search.default.directory_provider = filesystem
+hibernate.search.default.indexBase = ${lucene_indexes}
+#hibernate.search.Rules.directory_provider = local-heap
+#hibernate.search.Actions.directory_provider = com.acme.hibernate.CustomDirectoryProvider
 
 # Spring logging { INFO, DEBUG, ERROR }
 logging.level.sql = debug
