--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,25 +9,20 @@ spring.datasource.password=${DATABASE_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-# Lucene search
-hibernate.search.default.directory_provider = filesystem
-hibernate.search.default.indexBase = ${lucene_indexes}
-#hibernate.search.Rules.directory_provider = local-heap
-#hibernate.search.Actions.directory_provider = com.acme.hibernate.CustomDirectoryProvider
 
-# Spring logging { INFO, DEBUG, ERROR }
-logging.level.sql = debug
-#logging.level.org.springframework.security=debug
-logging.level.org.springframework.security.authentication=debug
-logging.level.org.springframework.security.authorization=debug
-logging.level.org.springframework.web=error
-logging.level.org.hibernate=error
+# Spring logging { INFO, ERROR, DEBUG }
+logging.level.sql = warn
+logging.level.org.springframework.security=warn
+#logging.level.org.springframework.security.authentication=warn
+#logging.level.org.springframework.security.authorization=warn
+logging.level.org.springframework.web=warn
+logging.level.org.hibernate=warn
 
 # server tomcat
 server.port=9000
 
 
-# generate view off
+# view
 spring.jpa.open-in-view=false
 # hide error message - bug postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -40,4 +35,4 @@ spring.thymeleaf.cache=false
 # app
 app.name=Bank-manager
 # address
-hostname=localhost:9000
+hostname=localhost:${server.port}
