edit user profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,7 +27,7 @@ spring.jpa.open-in-view=false
 # hide error message - bug postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # thymleaf
-spring.thymeleaf.cache=true
+spring.thymeleaf.cache=false
 
 ########
 # Vars #
