form and logic search with user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,29 @@
-# app
-app.name=Bank-manager
-
+##############
+## Settings ##
+##############
 # db
-spring.datasource.url= ${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASS}
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank_manager
+spring.datasource.username=postgres
+spring.datasource.password=5432
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 
-# var
-hostname=bank-manager
+# server tomcat
+server.port=9000
 
+# view
+spring.jpa.open-in-view=false
 # hide error message - bug postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # thymleaf
 spring.thymeleaf.cache=false
+
+########
+# Vars #
+########
+# app
+app.name=Bank-manager
+# address
+hostname=localhost:${server.port}
